# UnityCodeAgent

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  README.md  SKILLS.md  UnityCodeAgent.slnx  skills-lock.json
dev/kanban_viewer/: .gitignore  AGENTS.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  pyproject.toml  tsconfig.app.json  tsconfig.server.json  vite.config.ts
dev/kanban_viewer/backend/: __init__.py  kanban_repository.py  main.py
dev/kanban_viewer/backend/tests/: __init__.py  test_kanban_repository.py  test_main.py
dev/kanban_viewer/e2e/: kanban.spec.ts
dev/kanban_viewer/server/: app.ts  editorLauncher.ts  index.ts  markdown.ts  repository.ts  watchService.ts
dev/kanban_viewer/shared/: contracts.ts
dev/kanban_viewer/src/: App.test.tsx  App.tsx  api.test.ts  api.ts  boardState.test.ts  boardState.ts  index.css
dev/kanban_viewer/src/components/: KanbanBoard.behavior.test.tsx  KanbanBoard.test.tsx  KanbanBoard.tsx  KanbanColumn.tsx  TaskCard.test.tsx  TaskCard.tsx  dropDestination.ts
dev/kanban_viewer/tests/: app.test.ts  editorLauncher.test.ts  helpers.ts  markdown.test.ts  repository.test.ts  watchService.test.ts
evals/: README.md  agent_service_eval.py  conftest.py  metrics.py  pyproject.toml  pyrightconfig.json  test_eval_harness_unit.py  test_live_preflight.py  test_skill_scenarios.py
evals/unitycodeagent_evals/: __init__.py  artifacts.py  client.py  config.py  env.py  managed_service.py  mock_tools.py  models.py  paths.py  runner.py  scenario_selection.py  sse.py  utils.py
(+151 files in other folders)
