[project]
name = "unity-code-agent-kanban-viewer-backend"
version = "0.1.0"
description = "Local FastAPI backend for the UnityCodeAgent Markdown kanban viewer."
requires-python = ">=3.11,<3.12"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn>=0.35,<1",
  "watchfiles>=1.0,<2",
]

[dependency-groups]
dev = [
  "httpx2>=2.7,<3",
  "pytest>=8.3,<9",
]

[tool.uv]
package = false
